# Icosphere

./: CMakeLists.txt  README.md
cubicsphere/: cubicsphere.cpp  cubicsphere.h
hashmaps/: bytell_hash_map.h  flat_hash_map.h  robinhood.h
icosphere/: TriangleSelector.cpp  TriangleSelector.h  geometry.h  icosphere.cpp  icosphere.h
tests/: Makefile  icospheretest.cpp  main.cpp  minimalistprinter.h
